--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3005
 
-POSTGRES_PORT=5432
+POSTGRES_PORT=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
@@ -18,3 +18,9 @@ TYPEORM_ENTITIES=./src/entities/*
 TYPEORM_MIGRATIONS=./src/migrations/*.ts
 TYPEORM_ENTITIES_DIR=./src/entities
 TYPEORM_MIGRATIONS_DIR=./src/migrations
+
+PGHOST='ep-tiny-queen-550691.eu-central-1.aws.neon.tech'
+PGDATABASE='neondb'
+PGUSER='Ortsukh'
+PGPASSWORD="PW9Xfo5EKuwa"
+PGPORT='5432'
